Ajustes finais